v5.1.0/_sources/generated/pcdsdevices.inout.InOutRecordPositioner.rst.txt
pcdsdevices.inout.InOutRecordPositioner
=======================================

.. currentmodule:: pcdsdevices.inout

.. autoclass:: InOutRecordPositioner

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - state
          - :class:`~ophyd.signal.EpicsSignal`
          - 
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.state.StateRecordPositioner`
    
        * - motor
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:MOTOR``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.state.StateRecordPositioner`
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_inserted
    .. automethod:: check_removed
    .. automethod:: check_transmission
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_state
    .. automethod:: insert
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: set
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: in_states
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: needs_parent
    .. autoattribute:: out_states
    .. autoattribute:: position
    .. autoattribute:: settle_time
    .. autoattribute:: stage_group
    .. autoattribute:: states_list
    .. autoattribute:: timeout
    .. autoattribute:: transmission
    
    